<resources>
    <string name="app_name">EventsTrackerApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_all_users">View All Users</string>
    <string name="nav_all_events">View All Events</string>
    <string name="nav_club_events">View My Clubs Events</string>
    <string name="nav_club_members">View My Clubs Members</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_logout">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_carpool">Carpool</string>
    <string name="menu_subscriptions">Subscriptions</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="btn_signup">Create Account</string>
    <string name="btn_login">Login</string>
    <string name="et_email">Email</string>
    <string name="et_password">Password</string>
    <string name="et_first_name">First Name</string>
    <string name="et_last_name">Last Name</string>
    <string name="et_grad_year">Graduation Year</string>
    <string name="tv_goto_signup">Are you a new user? Click here</string>
    <string name="tv_goto_login">Already have an account? Click here</string>

    <string name="current_date">October, 2019</string>
    <string name="add_event">ADD CALENDAR EVENT</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="last_date">31</string>
</resources>
