<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.eventstrackerapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.example.eventstrackerapp.ui.calendar.CalendarFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/nav_carpool"
        android:name="com.example.eventstrackerapp.ui.carpool.CarpoolFragment"
        android:label="@string/menu_carpool"
        tools:layout="@layout/fragment_carpool" />

    <fragment
        android:id="@+id/nav_subscriptions"
        android:name="com.example.eventstrackerapp.ui.subscriptions.SubscriptionsFragment"
        android:label="@string/menu_subscriptions"
        tools:layout="@layout/fragment_subscriptions" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.eventstrackerapp.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.eventstrackerapp.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />

    <fragment
        android:id="@+id/nav_viewAllUsers"
        android:name="com.example.eventstrackerapp.ui.send.SendFragment"
        android:label="@string/nav_all_users"
        tools:layout="@layout/fragment_viewallusers" />

    <fragment
        android:id="@+id/nav_viewAllEvents"
        android:name="com.example.eventstrackerapp.ui.send.SendFragment"
        android:label="@string/nav_all_events"
        tools:layout="@layout/fragment_viewallevents" />

    <fragment
        android:id="@+id/nav_club_members"
        android:name="com.example.eventstrackerapp.ui.send.SendFragment"
        android:label="@string/nav_club_members"
        tools:layout="@layout/fragment_club_members" />

    <fragment
        android:id="@+id/nav_club_events"
        android:name="com.example.eventstrackerapp.ui.send.SendFragment"
        android:label="@string/nav_club_events"
        tools:layout="@layout/fragment_club_events" />
</navigation>